--- a/dashboard/views/viewProfile.ejs
+++ b/dashboard/views/viewProfile.ejs
@@ -7,8 +7,10 @@
         <div>
             <%- include("utils/navbar") %> 
 
-            <div class="text-center">
-                <p>Profile de <%= req.params.id %></p>
+            <div>
+                <div class="text-center">
+                    <p>Profile de ....</p>
+                </div>
             </div>
         </div>
     </body>
