--- a/dashboard/views/statistics.ejs
+++ b/dashboard/views/statistics.ejs
@@ -8,7 +8,7 @@
             <%- include("utils/navbar") %> 
 
             <div class="text-center">
-                <p>Pleins de graphe Monsieur <%= req.session.user.username %></p>
+                <p>Pleins de graphe Monsieur <%= req.user.username %></p>
             </div>
         </div>
     </body>
