--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -18,7 +18,7 @@
     </div>
     <div class="mobileToHidden hidden w-full flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="ml-auto text-center lg:text-justify">
-            <% if (req.session.user) { %>
+            <% if (req.user) { %>
                 <a href="/statistics" class="p-10 align-middle lg:px-10 lg:py-0 block lg:inline-block uppercase font-bold <%= "text-" + req.color %> hover:text-dark dark:hover:text-white">
                     Statistiques
                 </a>
