--- a/dashboard/views/statistics.ejs
+++ b/dashboard/views/statistics.ejs
@@ -3,7 +3,7 @@
     <head>
         <%- include("utils/header") %>
     </head>
-    <body class="dark:bg-gray-primary bg-white-primary">
+    <body class="dark:bg-gray-primary bg-white-primary transition duration-500 ease-in-out">
         <div>
             <%- include("utils/navbar") %> 
 
