--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -13,11 +13,11 @@
                 <div class="mt-10 text-center">
                     <a href="/api/discord/invite" class="group text-black dark:text-white hover:text-blurple dark:hover:text-blurple block lg:inline-block lg:mx-5">
                         <i class="fab fa-discord group-hover:animate-rotate360"></i>
-                        Ajoute le bot sur <span class="font-bold text-blurple">Discord</span>
+                        <%= res.__("dashboard.index.addBot") %> <span class="font-bold text-blurple"><%= res.__("dashboard.plateform.discord") %></span>
                     </a>
                     <a href="https://www.instagram.com/sudrefb/" class="text-black dark:text-white hover:gradient-instagram dark:hover:gradient-instagram hover:text-transparent dark:hover:text-transparent block lg:inline-block lg:mx-5">
                         <i class="fab fa-instagram"></i>
-                        Joue sur <span class="font-bold text-transparent gradient-instagram">Instagram</span>
+                        <%= res.__("dashboard.index.playOn") %> <span class="font-bold text-transparent gradient-instagram"><%= res.__("dashboard.plateform.insta") %></span>
                     </a>
                 </div>
                 <div class="flex items-center justify-center mt-10">
